17 Jan 2024 2nd  changes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1960,6 +1960,9 @@ section.post-category-banners .carousel-caption h1{
   section.main-section.charge_zahlen .counter-box:hover .added_details{
     right: -79%;
   }
+  .bd-highlight{
+    width: 240px;
+  }
 }
 @media screen and (max-width: 991px) and (min-width: 768px){
   .navbar-expand-md .navbar-collapse{
