--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1960,7 +1960,7 @@ section.post-category-banners .carousel-caption h1{
   section.main-section.charge_zahlen .counter-box:hover .added_details{
     right: -79%;
   }
-  .bd-highlight{
+  .newshome_content{
     width: 240px;
   }
 }
