--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -769,6 +769,7 @@ width: auto;;
   align-items: center;
   gap: 15px;
 }
+
 .newshome_content {
   position: absolute;
   bottom: 0;
@@ -916,8 +917,85 @@ list-style: none;
 padding: 0;
 display: block;
 }
+.footer-menu ul{
+  display: inline-flex !important;
+  gap: 0;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+/* checkmark start here */
 
+/* Hide the browser's default checkbox */
+.newsletter-mark input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.newsletter-mark{
+  position: relative;
+  display: block;
+  position: relative;
+  padding-left: 28px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+    top: 5px;
+    left: 0;
+    height: 16px;
+    width: 16px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 2px;
+}
+
+/* On mouse-over, add a grey background color */
+.newsletter-mark:hover input ~ .checkmark {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+
+/* When the checkbox is checked, add a blue background */
+.newsletter-mark input:checked ~ .checkmark {
+  background-color: var(--primary-clr);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.newsletter-mark .checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.newsletter-mark input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.newsletter-mark .checkmark::after {
+  left: 6px;
+  top: 3px;
+  width: 5px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(35deg);
+  -ms-transform: rotate(35deg);
+  transform: rotate(35deg);
+}
+/* checkmark end here */
 footer .footer-menu li{
+  flex: 0 0 50%;
   font-size: 15px;
   font-family: 'proxima-regular';
 }
