--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -971,9 +971,11 @@ display: block;
 
 /* Create the checkmark/indicator (hidden when not checked) */
 .newsletter-mark .checkmark::after {
-  content: "";
+  content: "✔";
   position: absolute;
   display: none;
+  font-size: 10px;
+  color: #fff;
 }
 
 /* Show the checkmark when checked */
@@ -983,15 +985,11 @@ display: block;
 
 /* Style the checkmark/indicator */
 .newsletter-mark .checkmark::after {
-  left: 6px;
-  top: 3px;
-  width: 5px;
-  height: 8px;
-  border: solid white;
+  left: 0px;
+  top: -18px;
+  width: 2px;
+  height: 5px;
   border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(35deg);
-  -ms-transform: rotate(35deg);
-  transform: rotate(35deg);
 }
 /* checkmark end here */
 footer .footer-menu li{
