--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -228,6 +228,7 @@ font-size: 40px;
 line-height: 50px;
 letter-spacing: 0em;
 text-align: left;
+color: #000!important;
   }
   
   .main-section p{
