--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1069,6 +1069,7 @@ footer .footer-review ul{
 }
 form.newsletter-form input[type="text"], form.newsletter-form input[type="email"]{
   width: 95%;
+  color: #fff;
   border-bottom: 1.2px solid #fff;
 }
 .gloabl_rating ul{display: inline-block;padding:0;}
