--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -358,6 +358,8 @@ margin: 30px 0;
       width: 100%;
       height: 100%;
       background-image: linear-gradient(rgb(0 0 0 / 0%) 85%, rgb(243 243 239));
+      z-index: 0;
+      user-select: none;
   }
   .kundengrup-card {
     position: relative;
@@ -2166,6 +2168,54 @@ section.main-section.all-insights {
  object-fit: cover;
  object-position: center center;
 }
+.custom-modal {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: 0 auto;
+  height: 100%;
+  overflow: auto;
+   background-color:rgb(32 32 32 / 70%);
+ }
+ 
+ .custom-modal-content {
+  position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    top: 20%;
+    border: 0;
+    width: 50%;
+    border-radius: 3px;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+    background-size: 110%;
+    background-position: center center;
+ }
+ .custom-modal-content h1,
+ .custom-modal-content h2,
+ .custom-modal-content h3,
+ .custom-modal-content h4,
+ .custom-modal-content h5,
+ .custom-modal-content h6,
+ .custom-modal-content p{
+  color: #fff !important;
+ }
+ .custom-modal-close{
+  position: absolute;
+    right: 0;
+    top: 0;
+    background: unset;
+    color: #fff;
+    box-shadow: unset;
+    border: 0;
+    font-size: 27px;
+ }
 @media screen and (min-width: 786px) and (max-width: 1400px) {
   section.main-section.charge_zahlen .counter-box:hover .added_details{
     right: -79%;
