popup New Updations

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2496,3 +2496,6 @@ text-align: center;
     width: 50%;
   }
 }
+@media screen and (max-width: 375px){
+  a.navbar-brand { margin-right: 0 !important; }
+}
