--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -114,7 +114,7 @@ section.main-section.kundengruppen_sec {
 }
 .banner-slider{
     width: 100%;
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: top center;
 }
@@ -189,7 +189,7 @@ section.main-section.kundengruppen_sec {
     display: none;
   }
   .dynamic-banner-2{
-    margin-top: 40%;
+    margin-top: 20%;
     }
 .banner-slider h2{
   font-family: proxima-bold;
@@ -237,9 +237,11 @@ text-align: left;
     font-size: 45px;
 }
   section.main-section.why_sec,
-  section.main-section.what_sec,
   section.main-section.how_sec{
-    min-height: 700px;
+    min-height: 600px;
+  }
+  section.main-section.what_sec{
+    min-height: 500px;
   }
   section.main-section.become-team-section,
   .min-height{
@@ -864,7 +866,7 @@ section.main-section.team_banner{
 }
 .team_banner a.zum-team{
   position: absolute;
-    bottom: -4%;
+    bottom: -35px;
     width: 200px;
     display: flex;
     align-items: center;
@@ -1084,6 +1086,7 @@ footer .footer-menu li{
   flex: 0 0 50%;
   font-size: 15px;
   font-family: 'proxima-regular';
+  width: 50%;
 }
 footer .footer-menu li a{
   color: #fff;
@@ -1193,7 +1196,7 @@ transform-style: preserve-3d;
 section.about_die{
   position: relative;
   overflow: hidden;
-  padding: 2.5% 0 6.5% ;
+  padding: 2.5% 0 2.5%;
 }
 section.about_die h4{
   color: #fff;
@@ -1318,7 +1321,7 @@ section.main-section.charge_zahlen:after{
   margin: 0 auto;
   position: absolute;
   width: 740px;
-  height: 650px;
+  height: 770px;
   top: 70px;
   right: 0;
   left: 0;
@@ -1382,7 +1385,7 @@ transition: all 0.5s;
 
 body header.innerpages{
   position: unset;
-  background: #F3F3EF;
+  background: #F3F3EF !important;
 }
 body header.innerpages .home-nav ul li a:not(.cc-button)
 {
@@ -1398,6 +1401,7 @@ body header.innerpages img{
   position: relative;
     left: 10px;
     margin-right: 10px;
+    display: none;
 }
 span.follow_linked {
   position: absolute;
@@ -1946,7 +1950,7 @@ margin: 0 auto;
   flex-direction: row;
   gap: 20px;
   background: transparent;
-  align-items: self-start;
+  align-items: center;
   margin-bottom: 18px;
 }
 .bar-charts .progress:last-child{
@@ -1959,7 +1963,7 @@ margin: 0 auto;
   width: auto;
   height: 30px;
   object-fit: cover;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 }
 .bar-charts .progress .progress-bar{
 background-color: var(--primary-clr);
@@ -2216,6 +2220,61 @@ section.main-section.all-insights {
     border: 0;
     font-size: 27px;
  }
+ nav.navbar.navbar-expand-lg {
+  padding: 0;
+}
+header.navbar.navbar-expand-md {
+  background-color: #000;
+  padding: 0;
+}
+
+
+.custom-image-text {
+  width: 50%;
+  max-width: 48%;
+}
+.custom-image-text img {
+  width: 100%;
+  position: relative;
+  left: inherit;
+}
+.row.custom-image-row-text {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.section-image-text .offset-lg-6 {
+  margin: 0;
+  width: 100%;
+}
+.section-image-text .col-lg-6 {
+  width: 100%;
+}
+.custom-image-row-text .section-image-text {
+  width: 50%;
+  max-width: 48%;
+}
+.row.custom_our_values-text {
+  display: flex;
+}
+.custom_our_values-text .our_values_image_custom {
+  width: 50%;
+  max-width: 50%;
+}
+.our_values_image_custom .col-lg-6 {
+  width: 100%;
+  padding: 0;
+}
+.custom_our_values_image img {
+  width: 100%;
+  height: auto !important;
+  position: relative;
+  left: inherit;
+}
+.custom_our_values_image {
+  padding: 0;
+}
 @media screen and (min-width: 786px) and (max-width: 1400px) {
   section.main-section.charge_zahlen .counter-box:hover .added_details{
     right: -79%;
@@ -2233,6 +2292,23 @@ section.main-section.all-insights {
 }
 .career-banner .carousel-caption{
   top: 20% !important;
+}
+}
+@media screen and (max-width: 991px) {
+  .custom-image-row-text .section-image-text {
+    width: 100%;
+    max-width: 100%;
+    margin-top: 20px;
+}
+.custom_our_values-text .our_values_image_custom {
+  width: 100%;
+  max-width: 100%;
+}
+.our_values_image_custom h2.section-title.mb-4 {
+  text-align: center;
+}
+.custom-image-row-text h2.section-title.mb-4 {
+  text-align: center;
 }
 }
 @media screen and (max-width: 768px) {
