--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -108,6 +108,7 @@ section.main-section.kundengruppen_sec {
 }
 .kundengrup-card .flip-card-back h4{
   font-size: 32px;
+  text-align: center;
 }
 .home-nav ul li:last-child{
   margin: 0;
