--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2369,6 +2369,14 @@ nav.navbar.navbar-expand-lg {
 .main-section h1 {
   font-size: 40px;
 }
+.custom-image-text {
+  width: 100%;
+  max-width: 100%;
+}
+.custom_our_values_image {
+  padding: 0;
+  max-width: 100% !important;
+}
 }
 @media screen and (max-width: 992px){
 
@@ -2392,6 +2400,7 @@ nav.navbar.navbar-expand-lg {
   }
 }
 @media screen and (max-width: 768px) {
+
   .projects-row .projects-col {
     height: auto;
     max-height: max-content;
